Minor clarifications